--- a/package.json
+++ b/package.json
@@ -34,41 +34,48 @@
     },
     "author": "Miami Larry",
     "dependencies": {
+      "@types/bcrypt": "^3.0.0",
+      "@types/jsonwebtoken": "^8.3.6",
+      "bcrypt": "^4.0.1",
       "body-parser": "^1.19.0",
+      "class-transformer": "^0.2.3",
+      "class-validator": "^0.11.1",
       "cookie-parser": "^1.4.4",
       "cors": "^2.8.5",
       "dotenv-safe": "^8.2.0",
       "express": "^4.17.1",
+      "jsonwebtoken": "^8.5.1",
       "pg": "^7.15.1",
+      "reflect-metadata": "^0.1.13",
       "typeorm": "^0.2.22"
     },
     "devDependencies": {
       "@types/chai": "^4.2.7",
-      "@types/express": "^4.17.2",
-      "@types/mocha": "^5.2.7",
-      "@types/node": "^13.7.7",
-      "@types/pg": "^7.14.1",
-      "@types/supertest": "^2.0.8",
-      "@typescript-eslint/eslint-plugin": "^2.11.0",
-      "@typescript-eslint/parser": "^2.22.0",
-      "chai": "^4.2.0",
-      "coveralls": "^3.0.7",
-      "custom-env": "^1.0.2",
-      "eslint": "^6.8.0",
-      "eslint-config-airbnb-base": "^14.0.0",
-      "eslint-config-node": "^4.0.0",
-      "eslint-config-prettier": "^6.10.0",
-      "eslint-plugin-import": "2.20.1",
-      "eslint-plugin-jsx-a11y": "^6.2.3",
-      "eslint-plugin-node": "^10.0.0",
-      "mocha": "^7.1.0",
-      "mocha-lcov-reporter": "^1.3.0",
-      "nodemon": "^1.19.4",
-      "nyc": "^15.0.0",
-      "prettier": "^1.18.2",
-      "supertest": "^4.0.2",
-      "ts-node": "^8.6.2",
-      "typescript": "^3.8.3"
+    "@types/express": "^4.17.2",
+    "@types/mocha": "^5.2.7",
+    "@types/node": "^12.12.22",
+    "@types/pg": "^7.11.2",
+    "@types/supertest": "^2.0.8",
+    "@typescript-eslint/eslint-plugin": "^2.11.0",
+    "@typescript-eslint/parser": "^2.11.0",
+    "chai": "^4.2.0",
+    "coveralls": "^3.0.7",
+    "custom-env": "^1.0.2",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-config-node": "^4.0.0",
+    "eslint-config-prettier": "^6.5.0",
+    "eslint-plugin-import": "2.19.1",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-node": "^10.0.0",
+    "mocha": "^7.0.0",
+    "mocha-lcov-reporter": "^1.3.0",
+    "nodemon": "^1.19.4",
+    "nyc": "^15.0.0",
+    "prettier": "^1.18.2",
+    "supertest": "^4.0.2",
+    "ts-node": "^8.5.4",
+    "typescript": "^3.7.3"
     }
   }
   
