--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,8 +15,10 @@ jobs:
            name: create-env
            command: sh .circleci/scripts/create-env.sh      
       - run:
-            name: run-tests
-            command: npm test   
+            name: run-tests & coverage
+            command: npm test && npm coverage
+      - coveralls/upload
+       
       - run:
             name: run-build
             command: npm run build
