--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,8 +15,8 @@ jobs:
            name: create-env
            command: sh .circleci/scripts/create-env.sh      
       - run:
-            name: run-tests & coverage
-            command: npm test && npm coverage
+            name: run-tests 
+            command: npm test 
       - run:
             name: run-build
             command: npm run build
